--- a/index.html
+++ b/index.html
@@ -3,30 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Spotify page 1</title>
+    <script src="https://kit.fontawesome.com/159682c93e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"> -->
+
     <nav class="side-nav">
         <div class="primary-card">
-            <a href="" id="logo" class="grey padded-link bold transition">Logo</a>
-            <a href="" id="home" class="grey padded-link bold transition">Home</a>
-            <a href="" id="search" class="grey padded-link bold transition">Search</a>
+            <a href="#" id="logo" class="transition align white"> <i class="fa-brands fa-spotify fa-xl" style="color: #ffffff;"></i>Spotify</a>
+            <a href="#" id="home" class="grey padded-15 bold transition align"> <i class="fa-solid fa-house fa-lg pmcard-icon"></i> Home</a>
+            <a href="" id="search" class="grey padded-15 bold transition align"> <i class="fa-solid fa-magnifying-glass fa-lg pmcard-icon"></i> Search</a>
         </div>
         <div class="secondary-card">
             <div class="library-heading">
-                <a href="" id="library" class="grey padded-link bold transition">Your Library</a>
+                <a href="" id="library" class="grey padded-15 bold transition align"> <i class="fa-solid fa-lines-leaning fa-flip-horizontal fa-lg smcard-icon"></i> Your Library</a>
                 <button class="round bgclr extra-effect"><a href="" id="create-playlist" class="grey plus" >+</a></button>
             </div>
             <div class="library-list">
                 <div class="card basicmargin-5">
                     <span class="primarytext-card bold">Create your first playlist</span>
                     <span class="secondarytext-card">It's easy, we'll help you</span>
-                    <button class="lib-btn width-120"><a href="" class="black bold fs-14">Create playlist</a></button>
+                    <button class="lib-btn width-120 btn-effect"><a href="" class="black bold fs-14">Create playlist</a></button>
                 </div>
                 <div class="card extramargin-20">
                     <span class="primarytext-card bold">Let's find some podcasts to follow</span>
                     <span class="secondarytext-card">We'll keep you updated on new episodes</span>
-                    <button class="lib-btn width-140"><a href="" class="black bold fs-14">Browse podcasts</a></button>
+                    <button class="lib-btn width-140 btn-effect"><a href="" class="black bold fs-14">Browse podcasts</a></button>
                 </div>
             </div>
         </div>
@@ -34,9 +37,12 @@
     <div class="mainbody">
         <nav class="heading">
             <div class="actions">
-                <button class="round bg-black"><a href="" class="go-back"> < </a></button>
-                <button class="round bg-black"><a href="" class="go-front"> > </a></button>
-                <input type="search" placeholder="What do you want to listen to?" class="search-box">
+                <button class="round bg-black"><i class="fa-solid fa-chevron-right fa-rotate-180" style="color: #ffffff;"></i></button>
+                <button class="round bg-black"><i class="fa-solid fa-chevron-right" style="color: #ffffff;"></i></button>
+                <div class="msb">
+                    <i class="fa-solid fa-magnifying-glass fa-lg pmcard-icon icnsearch grey"></i>
+                    <input type="text" placeholder= "What do you want to listen to?" class="search-box">
+                </div>
             </div>
             <div class="auth">
                 <a class="signup grey bold fs-14">Sign up</a>
@@ -44,7 +50,7 @@
             </div>
         </nav>
         <div class="cards-list" id="cards-list">
-            <span class="normal-text bold">Browse all</span>
+            <span class="normal-text bold" >Browse all</span>
             <a href="" class="music-cards" style="background-color: blue;"><p class="card-text">Podcasts</p></a>
         </div>
     </div>
